--- a/Car_Prediction.ipynb
+++ b/Car_Prediction.ipynb
@@ -1373,6 +1373,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "901c2bbd",
+   "metadata": {},
+   "source": [
+    "Metrics for Random Forest Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "id": "163a8083",
@@ -1390,6 +1398,7 @@
     }
    ],
    "source": [
+    "# Mean Absolut Error\n",
     "mean_absolute_error(y_test, y_predict)"
    ]
   },
@@ -1411,28 +1420,8 @@
     }
    ],
    "source": [
+    "# Mean Squared Error\n",
     "mean_squared_error(y_test, y_predict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "89d9ba35",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "117188.82595271843"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.sqrt(mean_squared_error(y_test, y_predict))"
    ]
   },
   {
@@ -1453,6 +1442,7 @@
     }
    ],
    "source": [
+    "# R-squared\n",
     "r2_score(y_test,y_predict)"
    ]
   }
