--- a/wine_predection.ipynb
+++ b/wine_predection.ipynb
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "id": "05293c3d",
    "metadata": {},
    "outputs": [
@@ -306,7 +306,7 @@
        "Name: quality, dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,19 +317,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "id": "f5dcd2f7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To predict the quality of the wine, I changed the values to good or bad\n",
+    "# To predict the quality of the wine, I changed the values to good or bad (Binary classification)\n",
     "df['quality'] = df['quality'].map({3 : 'bad', 4 :'bad', 5: 'bad',\n",
     "                                      6: 'good', 7: 'good', 8: 'good'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "id": "152a7eed",
    "metadata": {},
    "outputs": [
@@ -341,18 +341,19 @@
        "Name: quality, dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# check the data is balanced or not\n",
     "df['quality'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "id": "dc9ea1fc",
    "metadata": {},
    "outputs": [],
@@ -372,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "id": "dd22f995",
    "metadata": {},
    "outputs": [],
@@ -383,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "id": "6b23beba",
    "metadata": {},
    "outputs": [
@@ -393,7 +394,7 @@
        "((1599, 11), (1599,))"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "id": "e3b4e72c",
    "metadata": {},
    "outputs": [],
@@ -415,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "id": "6e4400eb",
    "metadata": {},
    "outputs": [
@@ -425,7 +426,7 @@
        "((1199, 11), (400, 11), (1199,), (400,))"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "id": "23c970a5",
    "metadata": {},
    "outputs": [],
@@ -465,19 +466,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "id": "ec9f7f76",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import GridSearchCV, cross_val_score\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "id": "9e2e90b9",
    "metadata": {},
    "outputs": [
@@ -493,6 +493,7 @@
     "lr = LogisticRegression(max_iter=2000)\n",
     "lr.fit(x_train_lr, y_train)\n",
     "train_pred = lr.predict(x_train_lr)\n",
+    "# Compare train accuracy and test accuracy\n",
     "train_accuracy = accuracy_score(y_train, train_pred)\n",
     "pred = lr.predict(x_test_lr)\n",
     "accuracy = accuracy_score(y_test, pred)\n",
@@ -501,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
    "id": "75509be6",
    "metadata": {},
    "outputs": [
@@ -512,7 +513,7 @@
        "       [ 50, 162]], dtype=int64)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "id": "c3b8ba63",
    "metadata": {},
    "outputs": [
@@ -541,18 +542,19 @@
        "0.7575"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Precision\n",
     "precision_score(y_test, pred, average='micro')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 20,
    "id": "6883d6dc",
    "metadata": {},
    "outputs": [
@@ -562,18 +564,19 @@
        "0.7575"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Recall\n",
     "recall_score(y_test, pred, average='micro')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "id": "48ebf44d",
    "metadata": {},
    "outputs": [
@@ -583,12 +586,13 @@
        "0.7575"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# f1_score\n",
     "f1_score(y_test, pred, average='micro')"
    ]
   },
@@ -597,32 +601,20 @@
    "id": "a84c7bb1",
    "metadata": {},
    "source": [
-    "### Decision Forest"
+    "### Decision Tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 22,
    "id": "9b69bc61",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0 0.7375\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
     "dtc = DecisionTreeClassifier()\n",
     "dtc.fit(x_train, y_train)\n",
-    "train_pred1 = dtc.predict(x_train)\n",
-    "train_accuracy = accuracy_score(y_train, train_pred1)\n",
-    "pred = dtc.predict(x_test)\n",
-    "accuracy = accuracy_score(y_test, pred)\n",
-    "print(train_accuracy, accuracy)"
+    "pred = dtc.predict(x_test)"
    ]
   },
   {
@@ -635,18 +627,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "3614c05c",
+   "execution_count": 23,
+   "id": "f1a722f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[142,  46],\n",
-       "       [ 59, 153]], dtype=int64)"
+       "array([[147,  41],\n",
+       "       [ 58, 154]], dtype=int64)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,64 +649,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 24,
+   "id": "b37d19b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7525"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Accuracy\n",
+    "accuracy_score(y_test, pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "4c7f4a60",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7375"
+       "0.7525"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Precision\n",
     "precision_score(y_test, pred, average='micro')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 26,
    "id": "f2a8d301",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7375"
+       "0.7525"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Recall\n",
     "recall_score(y_test, pred, average='micro')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 27,
    "id": "6338d1ca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7375"
+       "0.7525"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# f1_score\n",
     "f1_score(y_test, pred, average='micro')"
    ]
   },
@@ -728,27 +745,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 28,
    "id": "62547527",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0 0.82\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier as rfc\n",
     "rf = rfc()\n",
     "rf.fit(x_train, y_train)\n",
-    "train_pred1 = rf.predict(x_train)\n",
-    "train_accuracy = accuracy_score(y_train, train_pred1)\n",
-    "pred = rf.predict(x_test)\n",
-    "accuracy = accuracy_score(y_test, pred)\n",
-    "print(train_accuracy, accuracy)"
+    "pred = rf.predict(x_test)"
    ]
   },
   {
@@ -761,18 +766,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 29,
    "id": "055e7ee0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[157,  31],\n",
+       "array([[158,  30],\n",
        "       [ 41, 171]], dtype=int64)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,64 +788,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 30,
+   "id": "9ca937d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8225"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Accuracy\n",
+    "accuracy_score(y_test, pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "id": "26f8f23a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.82"
+       "0.8225"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Precision\n",
     "precision_score(y_test, pred, average='micro')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 32,
    "id": "3bd01b82",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.82"
+       "0.8225"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Recall\n",
     "recall_score(y_test, pred, average='micro')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 33,
    "id": "ecde6452",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.82"
+       "0.8225"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# f1_score\n",
     "f1_score(y_test, pred, average='micro')"
    ]
   }
