commit the change

--- a/Zomato_Prediction.ipynb
+++ b/Zomato_Prediction.ipynb
@@ -1876,7 +1876,7 @@
    "id": "b39aced2",
    "metadata": {},
    "source": [
-    "Metrics for linear regression"
+    "Metrics for Decision Tree Regression"
    ]
   },
   {
@@ -1971,7 +1971,7 @@
    "id": "6e339bbe",
    "metadata": {},
    "source": [
-    "Metrics for linear regression"
+    "Metrics for Random Forest Regression"
    ]
   },
   {
